--- a/FASTAPI/templates/index.html
+++ b/FASTAPI/templates/index.html
@@ -5,7 +5,8 @@
     </head>
     <body> 
         <h1>Welcome to User Management</h1>
-    <a href='/register'>Register</a>
+    <!--<a href='/register'>Register</a>
     <a href='/login/'>Login</a>
+        Add forms like this -->
     </body>
 </html>
